update on autoencoder
update on autoencoder

--- a/Zero_shot_Learning/Notebook/20240701_ZSL_(Restart).ipynb
+++ b/Zero_shot_Learning/Notebook/20240701_ZSL_(Restart).ipynb
@@ -873,7 +873,7 @@
     "        return np.zeros(50)\n",
     "\n",
     "sentence_embeddings = np.array([sentence_to_embedding(sentence, embeddings_index) for sentence in custom_sentences])\n",
-    "print(f\"sentence_embeddings : {type(embeddings_index)} \\n\")"
+    "print(f\"sentence_embeddings : {type(sentence_embeddings)} \\n\")"
    ]
   },
   {
