--- a/Zero_shot_Learning/Notebook/20240421_ZSL_with_ResNet50_glcm_autoencoder.ipynb
+++ b/Zero_shot_Learning/Notebook/20240421_ZSL_with_ResNet50_glcm_autoencoder.ipynb
@@ -482,13 +482,7 @@
       "3/3 [==============================] - 0s 25ms/step - loss: 0.1183 - val_loss: 0.1373\n",
       "Epoch 80/500\n",
       "3/3 [==============================] - 0s 22ms/step - loss: 0.1182 - val_loss: 0.1373\n",
-      "Epoch 81/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 81/500\n",
       "3/3 [==============================] - 0s 19ms/step - loss: 0.1182 - val_loss: 0.1374\n",
       "Epoch 82/500\n",
       "3/3 [==============================] - 0s 20ms/step - loss: 0.1181 - val_loss: 0.1374\n",
