--- a/Suresh Interview Project/Project_Multi_Cancer/Notebook/01_data_preparation.ipynb
+++ b/Suresh Interview Project/Project_Multi_Cancer/Notebook/01_data_preparation.ipynb
@@ -984,7 +984,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
+   "id": "8a2bac1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_path</th>\n",
+       "      <th>image_formate</th>\n",
+       "      <th>image_name</th>\n",
+       "      <th>image_lable</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>..\\Dataset\\dataset1\\cervix_pab\\cervix_pab_2355...</td>\n",
+       "      <td>jpg</td>\n",
+       "      <td>cervix_pab_2355.jpg</td>\n",
+       "      <td>cervix_pab</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>..\\Dataset\\dataset1\\oral_normal\\oral_normal_34...</td>\n",
+       "      <td>jpg</td>\n",
+       "      <td>oral_normal_3420.jpg</td>\n",
+       "      <td>oral_normal</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>..\\Dataset\\dataset1\\lymph_cll\\lymph_cll_4275.jpg</td>\n",
+       "      <td>jpg</td>\n",
+       "      <td>lymph_cll_4275.jpg</td>\n",
+       "      <td>lymph_cll</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>..\\Dataset\\dataset1\\all_pre\\all_pre_0100.jpg</td>\n",
+       "      <td>jpg</td>\n",
+       "      <td>all_pre_0100.jpg</td>\n",
+       "      <td>all_pre</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>..\\Dataset\\dataset1\\brain_tumor\\brain_tumor_21...</td>\n",
+       "      <td>jpg</td>\n",
+       "      <td>brain_tumor_2129.jpg</td>\n",
+       "      <td>brain_tumor</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          image_path image_formate  \\\n",
+       "0  ..\\Dataset\\dataset1\\cervix_pab\\cervix_pab_2355...           jpg   \n",
+       "1  ..\\Dataset\\dataset1\\oral_normal\\oral_normal_34...           jpg   \n",
+       "2   ..\\Dataset\\dataset1\\lymph_cll\\lymph_cll_4275.jpg           jpg   \n",
+       "3       ..\\Dataset\\dataset1\\all_pre\\all_pre_0100.jpg           jpg   \n",
+       "4  ..\\Dataset\\dataset1\\brain_tumor\\brain_tumor_21...           jpg   \n",
+       "\n",
+       "             image_name  image_lable  class  \n",
+       "0   cervix_pab_2355.jpg   cervix_pab     12  \n",
+       "1  oral_normal_3420.jpg  oral_normal     24  \n",
+       "2    lymph_cll_4275.jpg    lymph_cll     21  \n",
+       "3      all_pre_0100.jpg      all_pre      2  \n",
+       "4  brain_tumor_2129.jpg  brain_tumor      6  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_data_file = os.path.join('..', 'Dataset', 'test_data_dataset1_label_and_classes.csv')\n",
+    "data = pd.read_csv(training_data_file)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e6495a65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(17420, 5) (8581, 5)\n",
+      "(11671, 5) (5749, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "train_val, test = train_test_split(data, random_state=104, test_size=0.33, shuffle=True, stratify=data['class'])\n",
+    "\n",
+    "print(train_val.shape, test.shape)\n",
+    "\n",
+    "training_data, testing_data = train_test_split(train_val, random_state=104, \n",
+    "                                               test_size=0.33, shuffle=True, \n",
+    "                                               stratify=train_val['class'])\n",
+    "\n",
+    "print(training_data.shape, testing_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "a0f6c3d1",
    "metadata": {},
    "outputs": [],
@@ -1006,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "4d356c35",
    "metadata": {},
    "outputs": [],
@@ -1026,12 +1161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "id": "676a8a62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = pd.read_csv(test_data_file)\n",
+    "test_data = test.copy() # pd.read_csv(test_data_file)\n",
     "\n",
     "val_folder_name =  os.path.join('..', 'Dataset', 'data', 'val')\n",
     "os.makedirs(val_folder_name, exist_ok=True) \n",
