--- a/PyCaret/03_NidhiHarsh/PyCaret test 1.ipynb
+++ b/PyCaret/03_NidhiHarsh/PyCaret test 1.ipynb
@@ -3957,7 +3957,7 @@
     "    for md in glob.glob(os.path.join('models', '*')):\n",
     "\n",
     "        pkl_file_path = md # 'path_to_your_model.pkl'\n",
-    "        class_names = ['unsafe', 'safe'] # [-1, 1] # Update with your actual class names\n",
+    "        class_names = ['phishing', 'legitimate'] # [-1, 1] # Update with your actual class names\n",
     "\n",
     "        model = load_model(pkl_file_path)\n",
     "        # row_num = 150\n",
