modifyed resnet50 adam and sgd
modifyed resnet50 adam and sgd

--- a/Suresh Interview Project/Project_Multi_Cancer/Notebook/04_Modifyed_ResNet50_SGD.ipynb
+++ b/Suresh Interview Project/Project_Multi_Cancer/Notebook/04_Modifyed_ResNet50_SGD.ipynb
@@ -58,9 +58,9 @@
     "train_data_path = os.path.join('..', 'Dataset', 'data', 'train') # '/content/data/train'\n",
     "valid_data_path = os.path.join('..', 'Dataset', 'data', 'test') # '/content/data/test'\n",
     "\n",
-    "train_data_agumentation = ImageDataGenerator(rescale = 1./255\n",
+    "train_data_agumentation = ImageDataGenerator(rescale = 1./255,\n",
     "                                            #  shear_range = 0.2,\n",
-    "                                            #  zoom_range = 0.2,\n",
+    "                                             zoom_range = 0.2\n",
     "                                            #  horizontal_flip = True,\n",
     "                                            #  vertical_flip = True\n",
     "                                             )\n",
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_dir = 'checkpoints_modified_ResNet50'\n",
+    "checkpoint_dir = 'checkpoints_modified_ResNet50_SGD'\n",
     "if not os.path.exists(checkpoint_dir):\n",
     "    os.makedirs(checkpoint_dir)\n",
     "\n",
@@ -203,18 +203,22 @@
     "# - add custom layers on top of the VGG16 base model. \n",
     "# These layers will be responsible for classifying lymphoma \n",
     "# types based on the features extracted by the base model.\n",
-    "x = Flatten()(model.output)\n",
+    "x = Dense(2048, activation='relu')(x)\n",
+    "x = Dropout(0.2)(x)\n",
+    "x = Dense(1024, activation='relu')(x)\n",
+    "x = Dropout(0.2)(x)\n",
     "x = Dense(512, activation='relu')(x)\n",
-    "x = Dropout(0.5)(x)\n",
+    "x = Dropout(0.1)(x)\n",
     "x = Dense(256, activation='relu')(x)\n",
-    "x = Dropout(0.5)(x)\n",
+    "x = Dropout(0.1)(x)\n",
     "output_layer = Dense(num_classes, activation='softmax')(x)\n",
     "\n",
     "# model.layers.trainable = False\n",
-    "# for layer in model.layers:\n",
-    "#     layer.trainable = False\n",
-    "for layer in model.layers[-4:]:\n",
+    "for layer in model.layers:\n",
     "    layer.trainable = False\n",
+    "    \n",
+    "# for layer in model.layers[-4:]:\n",
+    "#     layer.trainable = False\n",
     "\n",
     "# create a model object\n",
     "model = Model(inputs = model.input, outputs = output_layer)\n",
@@ -232,24 +236,10 @@
     "sgd = SGD(learning_rate = 0.01, \n",
     "          momentum = 0.9, \n",
     "          nesterov = False)\n",
-    "\n",
-    "adam = Adam(learning_rate = 0.001, \n",
-    "            beta_1 = 0.9,\n",
-    "            beta_2 = 0.999,\n",
-    "            epsilon = 1e-07)\n",
-    "\n",
     "# compile the model with adam optimizer, categorical_croosentropy loss function\n",
-    "# model.compile(optimizer = 'adam',\n",
-    "#               loss = 'categorical_crossentropy',\n",
-    "#               metrics = ['accuracy'])\n",
-    "\n",
     "model.compile(optimizer = sgd,\n",
     "              loss = 'categorical_crossentropy',\n",
-    "              metrics = ['accuracy'])\n",
-    "\n",
-    "# model.compile(optimizer = adam\n",
-    "#               loss = 'categorical_crossentropy',\n",
-    "#               metrics = ['accuracy'])\n"
+    "              metrics = ['accuracy'])"
    ]
   },
   {
@@ -277,8 +267,8 @@
    ],
    "source": [
     "history = model.fit(train_data,\n",
-    "                    batch_size = 32,\n",
-    "                    epochs = 5,\n",
+    "                    batch_size = 64,\n",
+    "                    epochs = 100,\n",
     "                    validation_data = val_data,\n",
     "                    callbacks = callbacks_list)\n",
     "\n",
@@ -289,7 +279,7 @@
     "# validation_data=validation_generator,\n",
     "# validation_steps=validation_generator.samples // validation_generator.batch_size,\n",
     "\n",
-    "model.save('modified_ResNet50_SGD_model_last_epoch.karas')"
+    "model.save('modified_ResNet50_SGD_model_last_epoch.h5')"
    ]
   },
   {
@@ -324,14 +314,14 @@
     "plt.plot(history.history['accuracy'], label='train accuracy')\n",
     "plt.plot(history.history['val_accuracy'], label='val accuracy')\n",
     "plt.legend()\n",
-    "plt.savefig('accuracy_and_val_accuracy.png', dpi=200)\n",
+    "plt.savefig('modified_ResNet50_SGD_model_accuracy_and_val_accuracy.png', dpi=200)\n",
     "plt.show()\n",
     " \n",
     "# loss\n",
     "plt.plot(history.history['loss'], label='train loss')\n",
     "plt.plot(history.history['val_loss'], label='val loss')\n",
     "plt.legend()\n",
-    "plt.savefig('loss_and_val_loss.png', dpi=200)\n",
+    "plt.savefig('modified_ResNet50_SGD_model_loss_and_val_loss.png', dpi=200)\n",
     "plt.show()\n"
    ]
   },
@@ -351,108 +341,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "210b92a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "score = model.evaluate(val_data, verbose=0)\n",
-    "print('Test loss:', score[0])\n",
-    "print('Test accuracy:', score[1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2671ef1a",
-   "metadata": {},
-   "source": [
-    "### with Adam"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92bb0bdd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5\n",
-      "WARNING:tensorflow:From C:\\ProjectWork\\Basic_Python\\Suresh Interview Project\\Project_Multi_Cancer\\venv_multican\\lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
-      "\n",
-      "WARNING:tensorflow:From C:\\ProjectWork\\Basic_Python\\Suresh Interview Project\\Project_Multi_Cancer\\venv_multican\\lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
-      "\n",
-      "51/51 [==============================] - 1073s 21s/step - loss: 1.0444 - accuracy: 0.5215 - val_loss: 0.7977 - val_accuracy: 0.6250 - lr: 0.0010\n",
-      "Epoch 2/5\n",
-      "51/51 [==============================] - 1068s 21s/step - loss: 0.7247 - accuracy: 0.6791 - val_loss: 0.7290 - val_accuracy: 0.6799 - lr: 0.0010\n",
-      "Epoch 3/5\n",
-      "51/51 [==============================] - 1068s 21s/step - loss: 0.5960 - accuracy: 0.7544 - val_loss: 0.7264 - val_accuracy: 0.6534 - lr: 0.0010\n",
-      "Epoch 4/5\n",
-      "20/51 [==========>...................] - ETA: 7:19 - loss: 0.5306 - accuracy: 0.8016"
-     ]
-    }
-   ],
-   "source": [
-    "model.compile(optimizer = adam,\n",
-    "              loss = 'categorical_crossentropy',\n",
-    "              metrics = ['accuracy'])\n",
-    "\n",
-    "history_adam = model.fit(train_data, \n",
-    "                         batch_size = 32, \n",
-    "                         epochs = 5, \n",
-    "                         validation_data = val_data, \n",
-    "                         callbacks = callbacks_list)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5861d889",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save('modified_ResNet50_adam_model_last_epoch.karas')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec3d7277",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# accuracies\n",
-    "plt.plot(history_adam.history['accuracy'], label='train accuracy')\n",
-    "plt.plot(history_adam.history['val_accuracy'], label='val accuracy')\n",
-    "plt.legend()\n",
-    "plt.savefig('accuracy_and_val_accuracy.png', dpi=200)\n",
-    "plt.show()\n",
-    " \n",
-    "# loss\n",
-    "plt.plot(history_adam.history['loss'], label='train loss')\n",
-    "plt.plot(history_adam.history['val_loss'], label='val loss')\n",
-    "plt.legend()\n",
-    "plt.savefig('loss_and_val_loss.png', dpi=200)\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f997e8c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "score = model.evaluate(train_data, verbose=0)\n",
-    "print('Train loss:', score[0])\n",
-    "print('Train accuracy:', score[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad219795",
    "metadata": {},
    "outputs": [],
    "source": [
