--- a/Suresh Interview Project/Project_Multi_Cancer/Notebook/05_Hybrid Deep Learning and SVM-Based Image Classification.ipynb
+++ b/Suresh Interview Project/Project_Multi_Cancer/Notebook/05_Hybrid Deep Learning and SVM-Based Image Classification.ipynb
@@ -68,7 +68,7 @@
      "output_type": "stream",
      "text": [
       "Found 3216 images belonging to 3 classes.\n",
-      "101/101 [==============================] - 304s 3s/step\n"
+      "101/101 [==============================] - 616s 6s/step\n"
      ]
     }
    ],
@@ -106,35 +106,85 @@
     "# Add labels to the DataFrame\n",
     "df_features['label'] = labels\n",
     "\n",
+    "feature_dir = 'feature_csv'\n",
+    "if not os.path.exists(feature_dir):\n",
+    "    os.makedirs(feature_dir)\n",
+    "\n",
+    "file_name = 'resnet50_features.csv'\n",
     "# Save to CSV\n",
-    "df_features.to_csv(os.path.join('feature_csv', 'resnet50_features.csv'), index=False)\n"
+    "df_features.to_csv(os.path.join(feature_dir, file_name), index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "af464f52",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test Accuracy: 0.51\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the features and labels\n",
-    "data = pd.read_csv(os.path.join('feature_csv', 'resnet50_features.csv'))\n",
+    "data = pd.read_csv(os.path.join(feature_dir, file_name))\n",
     "\n",
     "# Split the data into features and labels\n",
     "X = data.drop(columns=['label'])\n",
     "y = data['label']\n",
     "\n",
     "# Split the dataset into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f1370c3",
+   "metadata": {},
+   "source": [
+    "0.59\n",
+    "0.51\n",
+    "0.52"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "36dd5c9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.59\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train an SVM classifier\n",
+    "svm_classifier = SVC(kernel='linear')  # You can choose other kernels like 'linear', 'rbf', 'poly', etc.\n",
+    "svm_classifier.fit(X_train, y_train)\n",
     "\n",
+    "# Predict on the test set\n",
+    "y_pred = svm_classifier.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Test Accuracy: {accuracy:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8922e296",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.59\n"
+     ]
+    }
+   ],
+   "source": [
     "# Train an SVM classifier\n",
     "svm_classifier = SVC(kernel='rbf')  # You can choose other kernels like 'linear', 'rbf', 'poly', etc.\n",
     "svm_classifier.fit(X_train, y_train)\n",
@@ -149,15 +199,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "95c1e6ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.59\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train an SVM classifier\n",
+    "svm_classifier = SVC(kernel='poly')  # You can choose other kernels like 'linear', 'rbf', 'poly', etc.\n",
+    "svm_classifier.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "y_pred = svm_classifier.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f'Test Accuracy: {accuracy:.2f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7f533fad",
+   "id": "d7ea4226",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "0.59\n",
-    "0.51\n",
-    "0.52"
-   ]
+   "source": []
   }
  ],
  "metadata": {
