--- a/Suresh Interview Project/Project_Multi_Cancer/Notebook/01_data_preparation.ipynb
+++ b/Suresh Interview Project/Project_Multi_Cancer/Notebook/01_data_preparation.ipynb
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "8a2bac1f",
    "metadata": {},
    "outputs": [
@@ -960,7 +960,7 @@
        "4   lymph_fl_4204.jpg    lymph_fl      1  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +973,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
+   "id": "509f6bed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6000, 5)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "e6495a65",
    "metadata": {},
    "outputs": [
@@ -981,15 +1002,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4800, 5) (1200, 5)\n",
-      "(3216, 5) (1584, 5)\n"
+      "(1800, 5) (4200, 5)\n",
+      "(1206, 5) (594, 5)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "train_val, test = train_test_split(data, random_state=104, test_size=0.2, shuffle=True, stratify=data['class'])\n",
+    "train_val, test = train_test_split(data, random_state=104, test_size=0.7, shuffle=True, stratify=data['class'])\n",
     "\n",
     "print(train_val.shape, test.shape)\n",
     "\n",
@@ -1002,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "a0f6c3d1",
    "metadata": {},
    "outputs": [],
@@ -1024,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "4d356c35",
    "metadata": {},
    "outputs": [],
@@ -1044,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "676a8a62",
    "metadata": {},
    "outputs": [],
