--- a/Suresh Interview Project/Project_Multi_Cancer/Notebook/01_VGG16_SCD.ipynb
+++ b/Suresh Interview Project/Project_Multi_Cancer/Notebook/01_VGG16_SCD.ipynb
@@ -456,15 +456,19 @@
    ],
    "source": [
     "history = model.fit(train_data,\n",
-    "                    batch_size = 64,\n",
-    "                    epochs = 100,\n",
+    "                    batch_size = 32,\n",
+    "                    epochs = 10,\n",
     "                    validation_data = val_data,\n",
     "                    callbacks = callbacks_list)\n",
     "\n",
     "# steps_per_epoch=len(training_set),\n",
     "# validation_steps=len(test_set),\n",
     "\n",
-    "model.save('VGG16_SGD_model_last_epoch.h5')"
+    "# model.save('VGG16_SGD_model_last_epoch.h5')\n",
+    "# Save the trained model\n",
+    "save_model_path = os.path.join(checkpoint_dir, 'VGG16_SGD_model_last_epoch.h5')\n",
+    "model.save(save_model_path)\n",
+    "print(f\"Model saved as {save_model_path}.\")"
    ]
   },
   {
@@ -553,12 +557,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "908cb4a5",
+   "metadata": {},
+   "source": [
+    "# Create Classification Report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "09918c57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\ProjectWork\\Basic_Python\\Suresh Interview Project\\Project_Multi_Cancer\\venv_multican\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras.models import load_model\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report, cohen_kappa_score\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import seaborn as sns\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84d765f5",
+   "id": "18f2f22d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create Classification Report\n",
+    "\n",
+    "def evaluate_model(y_true, y_pred, class_names=None):\n",
+    "    \"\"\"\n",
+    "    This function evaluates the performance of a model and prints the confusion matrix, \n",
+    "    accuracy score, classification report, and Cohen's kappa score. It also plots a heatmap of the confusion matrix.\n",
+    "    \n",
+    "    Args:\n",
+    "        y_true (array-like): Ground truth (true labels)\n",
+    "        y_pred (array-like): Predicted labels from the model\n",
+    "        class_names (list): List of class names for better readability in the confusion matrix\n",
+    "        \n",
+    "    Returns:\n",
+    "        None: Displays the evaluation metrics and heatmap.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Calculate confusion matrix\n",
+    "    cm = confusion_matrix(y_true, y_pred)\n",
+    "    \n",
+    "    # Calculate accuracy score\n",
+    "    accuracy = accuracy_score(y_true, y_pred)\n",
+    "    \n",
+    "    # Get classification report\n",
+    "    class_report = classification_report(y_true, y_pred, target_names=class_names)\n",
+    "    \n",
+    "    # Calculate Cohen's kappa score\n",
+    "    kappa_score = cohen_kappa_score(y_true, y_pred)\n",
+    "    \n",
+    "    # Print evaluation metrics\n",
+    "    print(\"Confusion Matrix:\\n\", cm)\n",
+    "    print(f\"\\nAccuracy Score: {accuracy * 100:.2f}%\")\n",
+    "    print(\"\\nClassification Report:\\n\", class_report)\n",
+    "    print(f\"Cohen's Kappa Score: {kappa_score:.4f}\")\n",
+    "    \n",
+    "    # Plot heatmap for confusion matrix\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=class_names, yticklabels=class_names)\n",
+    "    plt.title('Confusion Matrix Heatmap')\n",
+    "    plt.xlabel('Predicted Labels')\n",
+    "    plt.ylabel('True Labels')\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "def create_classification_report(model_path, test_data_dir):\n",
+    "    # Step 1: Set up directories and parameters\n",
+    "    # test_data_dir = 'data/train/'  # Path to the directory containing test images in folders 0, 1, 2\n",
+    "\n",
+    "    # Step 2: Load the trained model\n",
+    "    model = load_model(model_path)  # Assuming you've saved the model as .h5\n",
+    "\n",
+    "    # Step 3: ImageDataGenerator for loading test images (no augmentation needed for testing)\n",
+    "    test_datagen = ImageDataGenerator(rescale=1./255)  # Rescale pixel values to [0, 1]\n",
+    "\n",
+    "    # Step 4: Load test data using flow_from_directory\n",
+    "    test_generator = test_datagen.flow_from_directory(\n",
+    "        test_data_dir,\n",
+    "        target_size = (224, 224),  # Same size as the input size for your model\n",
+    "        batch_size = 32,  # Adjust according to your hardware\n",
+    "        class_mode = 'categorical',  # For multi-class classification\n",
+    "        shuffle = False  # Don't shuffle, we need to keep track of the order for y_true\n",
+    "    )\n",
+    "\n",
+    "    # Step 5: Get true labels from the generator\n",
+    "    y_true = test_generator.classes  # These are the true class labels\n",
+    "\n",
+    "    # Step 6: Predict using the model\n",
+    "    y_pred_prob = model.predict(test_generator)  # Predict probabilities for each class\n",
+    "    y_pred = np.argmax(y_pred_prob, axis=1)  # Get the index of the max probability (class label)\n",
+    "\n",
+    "    # Step 7: Map predicted and true labels to class names\n",
+    "    class_labels = list(test_generator.class_indices.keys())\n",
+    "\n",
+    "    # You can use the evaluation function from earlier for further analysis\n",
+    "    evaluate_model(y_true, y_pred, class_names=class_labels)\n",
+    "    \n",
+    "# Call the function\n",
+    "\n",
+    "model_path = os.path.join(checkpoint_dir, 'model_epoch_10_val_acc_0.74_val_loss_0.61.keras')\n",
+    "test_data_dir = os.path.join('..', 'Dataset', 'data', 'val')\n",
+    "\n",
+    "create_classification_report(model_path, test_data_dir)"
+   ]
   }
  ],
  "metadata": {
