--- a/Suresh Interview Project/Project_Multi_Cancer/Notebook/04_Modifyed_ResNet50_SGD.ipynb
+++ b/Suresh Interview Project/Project_Multi_Cancer/Notebook/04_Modifyed_ResNet50_SGD.ipynb
@@ -791,7 +791,8 @@
       "WARNING:tensorflow:From C:\\ProjectWork\\Basic_Python\\Suresh Interview Project\\Project_Multi_Cancer\\venv_multican\\lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
       "\n",
       "WARNING:tensorflow:From C:\\ProjectWork\\Basic_Python\\Suresh Interview Project\\Project_Multi_Cancer\\venv_multican\\lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
-      "\n"
+      "\n",
+      "26/38 [===================>..........] - ETA: 51s - loss: 8.5781 - accuracy: 0.3245"
      ]
     }
    ],
