project suicide update
project suicide update

--- a/Suresh Interview Project/Project Suicide Detection/Notebook/Experiment_01.ipynb
+++ b/Suresh Interview Project/Project Suicide Detection/Notebook/Experiment_01.ipynb
@@ -182,8 +182,8 @@
    ],
    "source": [
     "# Find duplicates based on the 'Name' column only\n",
-    "duplicates_by_name = data[data.duplicated(subset=['text'])]\n",
-    "print(\"Duplicates based on Name column:\\n\", duplicates_by_name)"
+    "duplicates_by_text = data[data.duplicated(subset=['text'])]\n",
+    "print(\"Duplicates based on Name column:\\n\", duplicates_by_text)"
    ]
   },
   {
