--- a/Suresh Interview Project/Project Suicide Detection/Notebook/Experiment_05.ipynb
+++ b/Suresh Interview Project/Project Suicide Detection/Notebook/Experiment_05.ipynb
@@ -54,12 +54,17 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, accuracy_score, f1_score, precision_score, recall_score, cohen_kappa_score\n",
     "\n",
+    "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import SVC\n",
     "import xgboost as xgb\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "import seaborn as sns\n",
     "\n",
     "import re\n",
     "import nltk\n",
@@ -250,9 +255,45 @@
     "    \n",
     "    return model, history\n",
     "\n",
-    "def evaluate_model():\n",
-    "    ...\n",
-    "    \n"
+    "def evaluate_model(y_true, y_pred):\n",
+    "    '''\n",
+    "    '''\n",
+    "    # accuracy: (tp + tn) / (p + n)\n",
+    "    accuracy = accuracy_score(y_true, y_pred)\n",
+    "    print('Accuracy: %f' % accuracy, '\\n')\n",
+    "    print('Error rate: %f' % (1-accuracy), '\\n')\n",
+    "    \n",
+    "    # Kappa\n",
+    "    kappa = cohen_kappa_score(y_true,y_pred)\n",
+    "    print('Cohens kappa: %f' % kappa, '\\n')\n",
+    "    \n",
+    "    # Classification report\n",
+    "    print(\"Classification_report \\n\", classification_report(y_true,y_pred), '\\n')\n",
+    "    \n",
+    "    # Confusion matrix\n",
+    "    matrix = confusion_matrix(y_true,y_pred)\n",
+    "    print('confusion_matrix \\n', matrix, '\\n')\n",
+    "    \n",
+    "    # Plot Confusion matrix\n",
+    "    plt.rcParams['font.size'] = 20\n",
+    "    bg_color = (0, 0.77, 0.77)\n",
+    "    plt.rcParams['figure.facecolor'] = bg_color\n",
+    "    plt.rcParams['axes.facecolor'] = bg_color\n",
+    "\n",
+    "    fig, ax = plt.subplots(1)\n",
+    "\n",
+    "    plt.text(1,-.3, \"Confusion Matrix\", fontsize = 25, color='Black', fontstyle='italic')\n",
+    "\n",
+    "    ax = sns.heatmap(matrix, annot=True, \n",
+    "                     annot_kws={'size':15}, fmt=\"d\",\n",
+    "                     robust=True, linewidths=.9, \n",
+    "                     cmap=\"RdYlBu\", square=True)\n",
+    "    # vmin=0, vmax=350,\n",
+    "    \n",
+    "    plt.savefig(\"model_VGG19.jpeg\", dpi=200, facecolor=bg_color, transparent=True)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    "
    ]
   },
   {
